# ros2_6dof_arm_pick_and_place

./: .gitignore  LICENSE  README.md
docs/: architecture.md
install/: local_setup.sh  setup.sh
install/industrial_arm_description/share/industrial_arm_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/industrial_arm_moveit/share/industrial_arm_moveit/: .setup_assistant  local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/industrial_arm_moveit/share/industrial_arm_moveit/launch/: rsp.launch.py  (+8 more)
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/: package.sh  package.xml
install/my_robot_moveit_config/share/my_robot_moveit_config/: .setup_assistant  local_setup.sh  package.sh
log/: latest_build
src/industrial_arm_description/: CMakeLists.txt  package.xml
src/industrial_arm_description/launch/: display.launch.py
src/industrial_arm_description/urdf/: industrial_arm.xacro  macros.xacro  materials.xacro  transmissions.xacro
src/my_robot_bringup/config/: ros2_controllers.yaml
src/my_robot_description/urdf/: arm.xacro  my_robot.urdf.xacro
src/my_robot_moveit_config/: CMakeLists.txt
src/my_robot_moveit_config/config/: ros2_controllers.yaml
src/my_robot_moveit_config/launch/: move_group.launch.py
src/my_robot_pick_place/: CMakeLists.txt  package.xml
src/my_robot_pick_place/launch/: pick_place.launch.py
src/my_robot_pick_place/src/: pick_place_node.cpp
(+21 files in other folders)
